fix(t): Incorrect collapse header color
(cherry picked from commit 75c45bcfaacb9845515eac829b1a8207186cf73b)

--- a/src/nz-zorro.scss
+++ b/src/nz-zorro.scss
@@ -5105,7 +5105,7 @@ nz-carousel {
     line-height: 1.5715;
     list-style: none;
     font-feature-settings: "tnum";
-    background-color: #fafafa;
+    background-color: $devui-base-bg;
     border: 1px solid $devui-dividing-line;
     border-bottom: 0;
     border-radius: 2px;
